--- a/reprop_install/安装说明.md
+++ b/reprop_install/安装说明.md
@@ -5,3 +5,5 @@
 3. 将`refpropm.m`、`rp_proto.m`、`rp_proto64.m`、`refprop_test.m`文件复制到matlab的工作文件夹中（即你编写matlab脚本的文件夹）。
 4. 运行`refprop_test.m`程序，检查是否安装成功。
 5. 在程序中调用`refpropm()`函数以查询物质热物性。具体的使用方法在`refprop_test.m`文件中有说明。
+
+注：如果没有安装到C盘，则需要手动设置环境变量。
